# guardduty-sentinel-integration

./: .eslintrc.js  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CRITICAL-FIXES-REQUIRED.md  DIRECTORY-STRUCTURE.md  LICENSE  PARSING-DEMO.kql  PRODUCTION-READINESS-ASSESSMENT.md  PRODUCTION-READY-SUMMARY.md  README.md  REDESIGN-PLAN.md  TESTING-COMPLETE-SUMMARY.md  deploy.sh  design.md  fix-errors.sh  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.md  tasks.md  test-deployment.sh  test-local.kql  test-with-real-data.kql  tsconfig.json
contracts/: README.md
deployment/: azuredeploy.json  azuredeploy.parameters.json  deploy.bicep
docs/: azure-monitor-client-implementation.md  connector-setup.md  deployment-guide.md  deployment-runbook.md  kms-permissions.md  operations-guide.md  performance-tuning-guide.md  proposed-upstream-issue.md  test-strategy.md  troubleshooting-guide.md  troubleshooting.md
infra/: README.md
kql/: AWSGuardDuty_ASIMNetworkSession.kql  AWSGuardDuty_Config.kql  AWSGuardDuty_EKS.kql  AWSGuardDuty_IAM.kql  AWSGuardDuty_Main.kql  AWSGuardDuty_Malware.kql  AWSGuardDuty_Network.kql  AWSGuardDuty_RDS.kql  AWSGuardDuty_S3.kql  AWSGuardDuty_Schema.kql
sample-data/: guardduty_findings.jsonl  test_queries.kql
samples/: README.md
scripts/: __init__.py  check_mutation_score.py  gates.sh  generate_test_system_diagram.py  lambda_ingestion_handler.py  run_live_conformance.py  sync_arm_template.py  validate-deployment.ps1
src/: index.ts
tests/: conftest.py  setup.ts  test_lambda_ingestion_handler.py  types.d.ts
(+156 files in other folders)
